<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="title">title</string>
    <string name="previous">previous</string>
    <string name="paged_init_text">1/1</string>
    <string name="next">next</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="slash">/</string>
    <string name="Screen_Rotation">Screen Rotation</string>
    <string name="Safely_Remove_SD">Safely Remove SD</string>
    <string name="Search">Search</string>
    <string name="Exit">Exit</string>
    <string name="Notifications">Notifications</string>
    <string name="file_browser_dialog">Browser</string>
    <string name="file_browser">File Browser</string>
    <string name="file_browser_hint">/</string>
    <string name="file_browser_button">Browser</string>
    <string name="OK">OK</string>
    <string name="unknown">unknown</string>
    <string name="SD_card_has_been_removed">SD card has been removed</string>
    <string name="file_not_exist">file not exist</string>
    <string name="dialogpaged_skip">skip:</string>
    <string name="edittext_hint">Edit text</string>
    <string name="page">page</string>
    <string name="go">Go</string>
    <string name="Exceed_the_total_number_of_pages">Exceed the total number of pages</string>
    <string name="Please_enter_the_number">Please enter the number</string>
    <string name="add_annotation">Add</string>
    <string name="update">Update</string>
    <string name="jump_to_root_directory">File or path does not exist, jump to the root directory</string>
    <string name="toc_title">Title</string>
    <string name="toc_page">Page</string>
    <string name="toc">TOC</string>
    <string name="font_face">Font face</string>
    <string name="delete">Delete</string>
    <string name="hint"/>
    <string name="page_initial_value">1</string>
    <string name="go_to_page">Go To Page</string>
    <string name="the_number_is_too_large">The number is too large</string>
    <string name="page_margins">Page margins</string>
    <string name="reader_setting">Settings</string>
    <string name="tabwidget_bookmark">Bookmark</string>
    <string name="tabwidget_toc">TOC</string>
    <string name="tabwidget_annotation">Annotation</string>
    <string name="directory_title">Directory</string>
    <string name="screen_refresh">Screen refresh</string>
    <string name="search_view_page">%1$s/%2$s</string>
    <string name="menu_item_rotation">Rotation</string>
    <string name="menu_item_font">Font</string>
    <string name="menu_item_toc">TOC</string>
    <string name="menu_item_tts">TTS</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_zoom">Zoom</string>
    <string name="menu_item_more">More</string>
    <string name="menu_item_bookmark">Bookmark</string>
    <string name="menu_item_annotation">Annotation</string>
    <string name="menu_item_dictionary">Dictionary</string>
    <string name="menu_item_startup_options">Startup Options</string>
    <string name="menu_item_screen_full">Full</string>
    <string name="menu_item_screen_exit_full">Exit Full</string>
    <string name="menu_item_line_spacing">Spacing</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_reading_mode">Paging</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_margin">Margin</string>
    <string name="menu_item_font_increase">Increase</string>
    <string name="menu_item_font_decrease">Decrease</string>
    <string name="menu_item_font_bold">Bold</string>
    <string name="menu_item_normal">Normal</string>
    <string name="menu_item_small">Small</string>
    <string name="menu_item_big">Big</string>
    <string name="menu_item_to_page">To page</string>
    <string name="menu_item_to_width">To width</string>
    <string name="menu_item_crop">Crop</string>
    <string name="menu_item_selection">Selection</string>
    <string name="menu_item_zoom_in">Zoom in</string>
    <string name="menu_item_zoom_out">Zoom out</string>
    <string name="delete_file_failed">Delete file failed</string>
    <string name="delete_file_canceled">Delete file canceled</string>
    <string name="delete_file_skipped">Delete file skipped</string>
    <string name="file_already_exists">File already exists</string>
    <string name="replace_file_failed">Replace file failed</string>
    <string name="menu_item_font_type">Type</string>
    <string name="Highlight">Highlight</string>
    <string name="Share">Share</string>
    <string name="Dictionary">Dictionary</string>
    <string name="Annotation">Annotation</string>
    <string name="lookup_others">Look up others</string>
    <string name="lookup">Look up</string>
    <string name="Cancel">Cancel</string>
    <string name="dialog_dictionary_title">No Explanation</string>
    <string name="dialog_dictionary_page">1/1</string>
    <string name="dialog_dictionary_text_legal">RAE Dictionary Legal Agreement</string>
    <string name="menu_item_fonts">Fonts</string>
    <string name="always">Always</string>
    <string name="every_3_pages">Every 3 pages</string>
    <string name="every_5_pages">Every 5 pages</string>
    <string name="every_7_pages">Every 7 pages</string>
    <string name="every_9_pages">Every 9 pages</string>
    <string name="never">Never</string>
    <string name="automatic">Automatic</string>
    <string name="reading_mode_single_page">Single Page</string>
    <string name="reading_mode_scroll">Scroll</string>
    <string name="hour_symbol">H</string>
    <string name="minute_symbol">M</string>
    <string name="second_symbol">S</string>
    <string name="sync">Sync</string>
    <string name="brightness">Brightness</string>
</resources>
