<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/layout_dictionary"
        android:layout_width="115dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:background="@drawable/reader_menu_item_background"
        android:gravity="center"
        android:visibility="gone"
        android:focusable="true"
         >

        <TextView
            android:id="@+id/textview_dictionary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/menu_item_dictionary"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageview_dictionary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/textview_dictionary"
            android:layout_centerHorizontal="true"
            android:contentDescription="@drawable/menu_dictionary"
            android:scaleType="fitCenter"
            android:src="@drawable/menu_dictionary" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_screen"
        android:layout_width="115dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:background="@drawable/reader_menu_item_background"
        android:gravity="center"
        android:visibility="gone"
        android:focusable="true"
         >

        <TextView
            android:id="@+id/textview_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/menu_item_screen_full"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageview_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/textview_screen"
            android:layout_centerHorizontal="true"
            android:contentDescription="@drawable/full_screen"
            android:scaleType="fitCenter"
            android:src="@drawable/full_screen" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_search"
        android:layout_width="115dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:background="@drawable/reader_menu_item_background"
        android:gravity="center"
        android:focusable="true"
         >

        <TextView
            android:id="@+id/textview_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/menu_item_search"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageview_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/textview_search"
            android:layout_centerHorizontal="true"
            android:contentDescription="@drawable/search"
            android:scaleType="fitCenter"
            android:src="@drawable/search" />
    </RelativeLayout>
    
     <RelativeLayout
        android:id="@+id/layout_settings"
        android:layout_width="115dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:background="@drawable/reader_menu_item_background"
        android:gravity="center"
        android:focusable="true"
         >
        <TextView
            android:id="@+id/textview_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/menu_item_settings"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageview_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/textview_settings"
            android:layout_centerHorizontal="true"
            android:contentDescription="@drawable/settings"
            android:scaleType="fitCenter"
            android:src="@drawable/settings" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_refresh"
        android:layout_width="115dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/reader_menu_item_background"
        android:gravity="center"
        android:focusable="true"
         >
        <TextView
            android:id="@+id/textview_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/menu_item_refresh"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageview_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/textview_refresh"
            android:layout_centerHorizontal="true"
            android:contentDescription="@drawable/menu_screen_refresh"
            android:scaleType="fitCenter"
            android:src="@drawable/menu_screen_refresh" />
    </RelativeLayout>
</LinearLayout>