<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="1dp"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_child"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone" >
    </LinearLayout>

    <TextView
        android:id="@+id/textview_child_lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selected_6"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/layout_tts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/reader_menu_item_background"
            android:gravity="center"
            android:focusable="true" >

            <TextView
                android:id="@+id/textview_tts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:text="@string/menu_item_tts"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageview_tts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/textview_tts"
                android:layout_centerHorizontal="true"
                android:contentDescription="@drawable/tts"
                android:scaleType="fitCenter"
                android:src="@drawable/tts" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_spacing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/reader_menu_item_background"
            android:gravity="center"
            android:focusable="true" >

            <TextView
                android:id="@+id/textview_line_spacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:text="@string/menu_item_line_spacing"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageview_line_spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/textview_line_spacing"
                android:layout_centerHorizontal="true"
                android:contentDescription="@drawable/line_spacing"
                android:scaleType="fitCenter"
                android:src="@drawable/line_spacing" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_toc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/reader_menu_item_background"
            android:gravity="center"
            android:focusable="true" >

            <TextView
                android:id="@+id/textview_toc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:text="@string/directory_title"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageview_toc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/textview_toc"
                android:layout_centerHorizontal="true"
                android:contentDescription="@drawable/directory"
                android:scaleType="fitCenter"
                android:src="@drawable/directory" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_font"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/reader_menu_item_background"
            android:gravity="center"
            android:focusable="true" >

            <TextView
                android:id="@+id/textview_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:text="@string/menu_item_font"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageview_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/textview_font"
                android:layout_centerHorizontal="true"
                android:contentDescription="@drawable/font"
                android:scaleType="fitCenter"
                android:src="@drawable/font" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_rotation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/reader_menu_item_background"
            android:gravity="center"
            android:focusable="true" >

            <TextView
                android:id="@+id/textview_rotation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:text="@string/menu_item_rotation"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageview_rotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/textview_rotation"
                android:layout_centerHorizontal="true"
                android:contentDescription="@drawable/rotation"
                android:scaleType="fitCenter"
                android:src="@drawable/rotation" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/reader_menu_item_background"
            android:gravity="center"
            android:focusable="true" >

            <TextView
                android:id="@+id/textview_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:text="@string/menu_item_more"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageview_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/textview_more"
                android:layout_centerHorizontal="true"
                android:contentDescription="@drawable/more"
                android:scaleType="fitCenter"
                android:src="@drawable/more" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>